syntax = "proto3";

enum NameRegistryEventType {
  NAME_REGISTRY_EVENT_TYPE_NONE = 0;
  NAME_REGISTRY_EVENT_TYPE_TRANSFER = 1;
  NAME_REGISTRY_EVENT_TYPE_RENEW = 2;
}

message NameRegistryEvent {
  uint32 block_number = 1;
  bytes block_hash = 2;
  bytes transaction_hash = 3;
  uint32 log_index = 4;
  bytes fname = 5;
  bytes from = 6;
  bytes to = 7;
  NameRegistryEventType type = 8;
  uint32 expiry = 9;
}
